--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#Propierties JWT
+security.jwt.secret=passwordProccess
+security.jwt.issuer=Main
+security.jwt.ttlMillis=3600000
